# IZ2

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: parallel_counter.h  sequential_counter.h
src/: main.c  main_par.c  main_seq.c  parallel_counter.c  sequential_counter.c
tests/: parallel.cpp  sequential.cpp
